--- a/src/components/Info/style.css
+++ b/src/components/Info/style.css
@@ -3,6 +3,7 @@
     margin-top: 20px;
     font-weight: 200;
     font-size: larger;
+    min-width: 300px;
 }
 
 .Info-Starships {
